--- a/front_end_shoponline/assets/css/style.css
+++ b/front_end_shoponline/assets/css/style.css
@@ -227,13 +227,9 @@
 }
 .product-image {
   position: relative;
-  height: auto;
+  height: 700px;
 }
-.product-image1 {
-  background-color: rebeccapurple;
-  height: 10000px;
-  width: 100%;
-}
+
 .product-image .image1 {
   position: absolute;
   top: 0;
@@ -247,10 +243,75 @@
   opacity: 0;
   transition: all 0.5s;
 }
-.product-image .image2:hover {
+.product-image:hover .image2 {
   opacity: 1;
 }
-.textzindex {
+.linkimage {
   position: absolute;
   top: 500px;
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.textimage {
+  display: flex;
+  font-weight: 500;
+}
+.shopaction {
+  position: absolute;
+  bottom: 220px;
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.5);
+  width: 92%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+.product-image:hover .shopaction {
+  opacity: 1;
+}
+.button-click {
+  border: 1px solid #000;
+  padding: 3px 30px;
+  transform: scale(0.5);
+
+  transition: all ease 0.35s;
+  position: relative;
+  margin-top: 0px;
+  font-size: 15px;
+
+  /* //visibility: hidden; */
+  opacity: 0;
+  letter-spacing: 0.2em;
+}
+.product-image:hover .button-click {
+  opacity: 1;
+  transform: scale(1);
+}
+.letterspacing {
+  letter-spacing: 2px;
+}
+.linkfooter li {
+  font-family: "Arapey", Sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: italic;
+  line-height: 22px;
+  letter-spacing: 0.2px;
+}
+
+.button-gmail {
+  padding: 3px 15px;
+  border: 1px solid #dadada;
+  border-right: none;
+}
+.text-gmail {
+  padding: 0 3px;
+  border: 1px solid #dadada;
+  border-left: none;
 }
